# fire_fly_app_windows

./: README.md  package-lock.json  package.json
.github/workflows/: azure-static-web-apps-ashy-sand-0a8d3f910.yml
src/: App.css  App.js  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: CardDeck.js  clock.js
src/components/AboutWindow/: AboutWindow.js
src/components/AboutWindow/css/: about.css
src/components/Layout/: Layout.js
src/components/MainWindow/: MainLayout.js
src/components/QueueStatistic/: index.js
src/components/QueueStatistic/css/: statistic.css
src/components/component/: menufooter.js
src/components/developer/: DeveloperInfo.js
src/components/sections/dashboard/customer-fulfilment/: CustomerFulfillment.tsx
src/components/settingswindow/: settingswindow.js
